Changed header file for Jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Testing
-description: Testing description
+title: DKorablin repositories
+description: The list of releases from some of private repositories
