--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ theme: jekyll-theme-minimal
 title: DKorablin repositories
 description: The list of releases from some of private repositories
 
-defaults:
-  -
-    scope:
-      path: ""   # applies to all files
-    values:
-      layout: default
+#defaults:
+#  -
+#    scope:
+#      path: ""   # applies to all files
+#    values:
+#      layout: default
