Changed file size and moved releases block into shared file

--- a/_data/Flatbed-Dialog-Lite.yml
+++ b/_data/Flatbed-Dialog-Lite.yml
@@ -3,3 +3,4 @@
   files:
     - name: "Flatbed.Dialog.Lite_v1.1.17.zip"
       url: "/Flatbed-Dialog-Lite/v1.1.17/Flatbed.Dialog.Lite_v1.1.17.zip"
+      size: 340932
