--- a/_data/Flatbed-MDI-Avalon.yml
+++ b/_data/Flatbed-MDI-Avalon.yml
@@ -3,3 +3,4 @@
   files:
     - name: "Flatbed.MDI.Avalon_v1.0.20.zip"
       url: "/Flatbed-MDI-Avalon/v1.0.20/Flatbed.MDI.Avalon_v1.0.20.zip"
+      size: 503795
