--- a/_data/Flatbed-WorkerService.yml
+++ b/_data/Flatbed-WorkerService.yml
@@ -3,3 +3,4 @@
   files:
     - name: "Flatbed.WorkerService_v1.2.14.zip"
       url: "/Flatbed-WorkerService/v1.2.14/Flatbed.WorkerService_v1.2.14.zip"
+      size: 2015144
